--- a/index.html
+++ b/index.html
@@ -58,12 +58,14 @@
                 </div>
             </div>
             <div class="item-lineup">
-                <div class="item-lineup-title">
-                    <h4>商品ラインナップ</h4>
-                </div>
-                <div class="item-lineup-items">
-                    <p>サバフィレ、サバ切身、シメサバ、アジフィレ、アジ開き、アジフライ、イワシフィレ、イワシ開き、<br>
-                    イワシフライ、ノドグロ炙り寿司ネタ、ノドグロ寿司ネタ、ノドグロフィレ、連子鯛フィレ、連子鯛開き　など</p>
+                <div class="lineup-container">
+                    <div class="item-lineup-title">
+                        <h4>商品ラインナップ</h4>
+                    </div>
+                    <div class="item-lineup-items">
+                        <p>サバフィレ、サバ切身、シメサバ、アジフィレ、アジ開き、アジフライ、イワシフィレ、イワシ開き、
+                        イワシフライ、ノドグロ炙り寿司ネタ、ノドグロ寿司ネタ、ノドグロフィレ、連子鯛フィレ、連子鯛開き　など</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -146,13 +148,13 @@
                 <table class="footer-table-right">
                     <tr>
                         <td>事務所</td>
-                        <td>TEL 078-351-2227 FAX 078-351-2228<br><br>
+                        <td>TEL 078-351-2227 　FAX 078-351-2228<br><br>
                         〒650-0023<br><br>
                         神戸市中央区栄町通５丁目２番10号　佳山ビル401号室</td>
                     </tr>
                     <tr>
                         <td>本社所在地</td>
-                        <td>〒651-0084　神戸市中央区磯部どうり磯辺通１丁目２番２０号　３F</td>
+                        <td>〒651-0084<br><br>神戸市中央区磯部どうり磯辺通１丁目２番２０号　３F</td>
                     </tr>
                     <tr>
                         <td>取引先銀行</td>
