--- a/contact.html
+++ b/contact.html
@@ -14,47 +14,27 @@
         </div>
         <div class="contact-form-container">
             <form action="">
-                <!-- <table class="form-table">
-                    <tr>
-                        <td>名前</td>
-                        <td><input class="table-text" type="text"　size="50"></td>
-                    </tr>
-                    <tr>
-                        <td>電話番号</td>
-                        <td><input class="table-text" type="text"></td>
-                    </tr>
-                    <tr>
-                        <td>メールアドレス</td>
-                        <td><input class="table-text" type="text"></td>
-                    </tr>
-                    <tr>
-                        <td>住所</td>
-                        <td><input class="table-text" type="text"></td>
-                    </tr>
-                    <tr>
-                        <td>その他記入欄</td>
-                        <td><textarea name="" id="" cols="50" rows="10"></textarea></td>
-                    </tr>
-                </table> -->
-                <div>
-                    <label for="">名前</label>
-                    <input type="text"　size="50">
-                </div>
-                <div>
-                    <label for="">電話番号</label>
-                    <input type="tel">
-                </div>
-                <div>
-                    <label for="">メールアドレス</label>
-                    <input type="mail">
-                </div>
-                <div>
-                    <label for="">住所</label>
-                    <input type="text">
-                </div>
-                <div>
-                    <label for="">その他記入欄</label>
-                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                <div class="form-items">
+                    <div class="form-item">
+                        <label for="">名前</label>
+                        <input type="text"　size="50">
+                    </div>
+                    <div class="form-item">
+                        <label for="">電話番号</label>
+                        <input type="tel">
+                    </div>
+                    <div class="form-item">
+                        <label for="">メールアドレス</label>
+                        <input type="mail">
+                    </div>
+                    <div class="form-item">
+                        <label for="">住所</label>
+                        <input type="text">
+                    </div>
+                    <div class="form-item">
+                        <label for="">その他記入欄</label>
+                        <textarea name="" id="" cols="30" rows="10"></textarea>
+                    </div>
                 </div>
                 <button type="submit">送信</button>
             </form>
