--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/461c67f52d.js" crossorigin="anonymous"></script>
 </head>
@@ -12,23 +13,29 @@
     <div class="main-wrapper">
 
         <section id="top" class="top">
-            <header>
-                <nav>
-                    <ul class="nav-list">
-                        <!-- <li><a href="#top">TOP</a></li> -->
-                        <li><a href="#service">サービス内容と商品</a></li>
-                        <li><a href="#vision">経営ビジョン</a></li>
-                        <li><a href="#contact">お問い合わせ</a></li>
-                    </ul>
-                </nav>
-            </header>
-            <div class="frase">
-                <h1>　　人より楽しく<br>　人よりワクワクする<br>仕事をする</h1>
-                <p>We Work More Fun and Exciting than People.</p>
-            </div>
-            <div class="company-name">
-                <p>株式会社　エスビートレート</p>
-                <p>SB TRADE CO.,LTD.COMPANY</p>
+            <div class="top-container"
+            data-aos="fade-right"
+            data-aos-offset="300"
+            data-aos-easing="ease-in-sine">
+                <header>
+    
+                    <nav>
+                        <ul class="nav-list">
+                            <!-- <li><a href="#top">TOP</a></li> -->
+                            <li><a href="#service">サービス内容と商品</a></li>
+                            <li><a href="#vision">経営ビジョン</a></li>
+                            <li><a href="contact.php">お問い合わせ</a></li>
+                        </ul>
+                    </nav>
+                </header>
+                <div class="frase">
+                    <h1>　　人より楽しく<br>　人よりワクワクする<br>仕事をする</h1>
+                    <p>We Work More Fun and Exciting than People.</p>
+                </div>
+                <div class="company-name">
+                    <p>株式会社　エスビートレート</p>
+                    <p>SB TRADE CO.,LTD.COMPANY</p>
+                </div>
             </div>
         </section>
 
@@ -38,7 +45,7 @@
                 <p>食の提案にて幸せも供給する</p>
             </div>
             <div class="company-contents-inner">
-                <div class="company-contents-upper">
+                <div class="company-contents-upper" data-aos="fade-right">
                     <img src="img/fish.jpg" alt="" class="company-contents-img">    
                     <div class="contents-upper-box">
                         <h4 class="contents-box-title">加工メーカー様向け</h4>
@@ -47,7 +54,7 @@
                             製品としては一次加工品（フィレ、切身）、調味漬け加工品、寿司ネタ加工品等を輸入しております。</p>
                     </div>
                 </div>
-                <div class="company-contents-down">
+                <div class="company-contents-down" data-aos="fade-left">
                     <img src="img/servicepic.jpg" alt="" class="company-contents-img">
                     <div class="contents-down-box">
                         <h4 class="contents-box-title">卸売会社様、末端様向け</h4>
@@ -57,7 +64,7 @@
                     </div>
                 </div>
             </div>
-            <div class="item-lineup">
+            <div class="item-lineup" data-aos="zoom-in">
                 <div class="lineup-container">
                     <div class="item-lineup-title">
                         <h4>商品ラインナップ</h4>
@@ -75,7 +82,7 @@
                 <h2>経営ビジョン</h2>
             </div>
             <div class="vistion-items">
-                <dl class="vision-item item1">
+                <dl class="vision-item item1" data-aos="zoom-in-up">
                     <dt>
                         <h3>01</h3>
                     </dt>
@@ -86,7 +93,7 @@
                             製造を行って参ります。</p>
                     </dd>
                 </dl>
-                <dl class="vision-item item2">
+                <dl class="vision-item item2" data-aos="zoom-in-up">
                     <dt>
                         <h3>02</h3>
                     </dt>
@@ -96,7 +103,7 @@
                             魚を食べる事の喜びを発信すべく原料加工並びに製品の開発をして参ります。</p>
                     </dd>
                 </dl>
-                <dl class="vision-item item3">
+                <dl class="vision-item item3" data-aos="zoom-in-up">
                     <dt>
                         <h3>03</h3>
                     </dt>
@@ -109,15 +116,15 @@
             </div>
         </section>
 
-        <section id="contact">
+        <section id="contact" data-aos="zoom-in-up">
             <div class="contact-tel">
                 <div class="contact-tel-bgcover"></div>
                 <h4>お電話でのお問い合わせはこちら<br>
                 <i class="fas fa-phone-alt"></i><span>078-351-2227</span></h4>
             </div>
-            <div class="contact-mail">
+            <div class="contact-mail" data-aos="zoom-in-up">
                 <h4>Contact us</h4>
-                <p><a href="contact.html">メールにてのお問い合わせはこちら</a></p>
+                <p><a href="contact.php">メールにてのお問い合わせはこちら</a></p>
             </div>
         </section>
 
@@ -164,5 +171,10 @@
             </div>
         </div>
     </footer>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
