--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 </head>
 <body>
     <header>
-        <nav class="nav-bar">
+        <nav class="menu-bar">
             <div class="icon">
                 <div class="humburger"></div>
             </div>
             <ul class="nav-list">
-                <li><a href="#top">TOP</a></li>
-                <li><a href="#service">サービス内容と商品</a></li>
-                <li><a href="#vision">経営ビジョン</a></li>
-                <li><a href="contact.php">お問い合わせ</a></li>
+                <li class="toggle-closer"><a href="#top">TOP</a></li>
+                <li class="toggle-closer"><a href="#service">サービス内容と商品</a></li>
+                <li class="toggle-closer"><a href="#vision">経営ビジョン</a></li>
+                <li class="toggle-closer"><a href="contact.php">お問い合わせ</a></li>
             </ul>
         </nav>
     </header>
