--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
     <header>
         <nav class="menu-bar">
-            <div class="icon">
-                <div class="humburger"></div>
+            <div id="menu-toggle" class="icon">
+                <div class="hamburger"></div>
             </div>
             <ul class="nav-list">
-                <li class="toggle-closer"><a href="#top">TOP</a></li>
-                <li class="toggle-closer"><a href="#service">サービス内容と商品</a></li>
-                <li class="toggle-closer"><a href="#vision">経営ビジョン</a></li>
-                <li class="toggle-closer"><a href="contact.php">お問い合わせ</a></li>
+                <li><a class="toggle-closer" href="#top">TOP</a></li>
+                <li><a class="toggle-closer" href="#service">サービス内容と商品</a></li>
+                <li><a class="toggle-closer" href="#vision">経営ビジョン</a></li>
+                <li><a class="toggle-closer" href="contact.php">お問い合わせ</a></li>
             </ul>
         </nav>
     </header>
