--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/service_content.css">
+    <link rel="stylesheet" href="css/vision.css">
+    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/461c67f52d.js" crossorigin="anonymous"></script>
@@ -120,7 +124,7 @@
             </div>
         </section>
 
-        <section id="contact"data-aos="zoom-in-up">
+        <section id="contact">
             <div class="contact-tel">
                 <div class="contact-tel-bgcover"></div>
                 <h4>お電話でのお問い合わせはこちら<br>
