--- a/index.html
+++ b/index.html
@@ -57,18 +57,20 @@
                     <img src="img/fish.jpg" alt="" class="company-contents-img">    
                     <div class="contents-upper-box">
                         <h4 class="contents-box-title">加工メーカー様向け</h4>
-                        <p class="contents-box-text">人手不足が深刻な中、国内工場は人員確保に苦慮している現状があります。
-                            その中、弊社としては海外（中国、ベトナムが主）に加工協力工場をもっており順次原料を送り込んでおります。
-                            製品としては一次加工品（フィレ、切身）、調味漬け加工品、寿司ネタ加工品等を輸入しております。</p>
+                        <p class="contents-box-text">人手不足が深刻の中、国内工場は人員確保に苦慮している現状があります。
+                            弊社としては海外協力工場に順次原料を送り込んでおります。
+                            またその加工した製品の販売協力も行っております。
+                            また原料の輸入、海外原料の製品の輸入も行っております。随時コンテナ搬入を行っているため
+                            少量のロットでの混載で輸入をすることが可能です。</p>
                     </div>
                 </div>
                 <div class="company-contents-down" data-aos="fade-left">
                     <img src="img/servicepic.jpg" alt="" class="company-contents-img">
                     <div class="contents-down-box">
-                        <h4 class="contents-box-title">卸売会社様、末端様向け</h4>
-                        <p class="contents-box-text">加工メーカー様の扱い商品を中心に販売をおこなっております。
-                            海外加工を通じて得た加工メーカーの良さ、
-                            こだわりをより深いところまで ご提案することが可能です。</p>
+                        <h4 class="contents-box-title">卸し売り会社様、末端消費者様向け</h4>
+                        <p class="contents-box-text">加工メーカー様の扱い商品を中心に販売を行っております。
+                            海外加工を通じて得た加工メーカー様の良さ、こだわりをより深いところまで、ご提案することが可能です。
+                            また国内工場同様、弊社QC（品質管理者）が細かい手の届かない製品作りまでお手伝いができます。</p>
                     </div>
                 </div>
             </div>
@@ -95,10 +97,8 @@
                         <h3>01</h3>
                     </dt>
                     <dd>
-                        <h4>お客様と共に成長できる企業を目指します。</h4>
-                        <p>受託加工並びに、加工メーカー様お取り扱いの商品を一緒になって考え、
-                            製造、販売を行い、売り上げとともに互いのスキルアップを目標として販売、
-                            製造を行って参ります。</p>
+                        <h4>お客様と共に成長できる企業を目指します</h4>
+                        <p>お客様と一緒になって考え、販売及び製造を行い共に売り上げアップを目標として精進して参ります。</p>
                     </dd>
                 </dl>
                 <dl class="vision-item item2">
@@ -107,8 +107,9 @@
                     </dt>
                     <dd>
                         <h4>加工用水産原料と素材の美味しさを生かした商品開発に努めます</h4>
-                        <p>品質はもちろんの事、皆様が食べて美味しいと感じていただけるような製造を行い、
-                            魚を食べる事の喜びを発信すべく原料加工並びに製品の開発をして参ります。</p>
+                        <p>品質はもちろんの事、皆様が食べて美味しいと感じて頂けるような製造を行い、
+                            魚を食べる事の喜びを発信すべく徹底した原料買い付け並びに
+                            製品開発をして参ります。</p>
                     </dd>
                 </dl>
                 <dl class="vision-item item3">
@@ -117,8 +118,8 @@
                     </dt>
                     <dd>
                         <h4>海外工場の徹底した管理を行い、海外加工の不安を払拭します</h4>
-                        <p>提携工場(主にベトナム、中国)を持ち、現地スタッフ、QC(品質管理担当)と共に現地にて加工指導をし、
-                            お客様の求める品質へ納得の出来るものを作って参ります。</p>
+                        <p>海外協力工場（主にベトナム、中国）を持ち、現地のスタッフ、日本人のQC（品質管理担当）と共に現地にて加工指導、品質管理を行い、お客様の求める品質へ
+                                納得の出来るものを作って参ります。</p>
                     </dd>
                 </dl>
             </div>
