--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="company-contents-down" data-aos="fade-left">
                     <img src="img/servicepic.jpg" alt="" class="company-contents-img">
                     <div class="contents-down-box">
-                        <h4 class="contents-box-title">卸し売り会社様、末端消費者様向け</h4>
+                        <h4 class="contents-box-title">卸売り業者様、末端消費者様向け</h4>
                         <p class="contents-box-text">加工メーカー様の扱い商品を中心に販売を行っております。
                             海外加工を通じて得た加工メーカー様の良さ、こだわりをより深いところまで、ご提案することが可能です。
                             また国内工場同様、弊社QC（品質管理者）が細かい手の届かない製品作りまでお手伝いができます。</p>
@@ -170,7 +170,7 @@
                     </tr>
                     <tr>
                         <td>本社所在地</td>
-                        <td>〒651-0084<br><br>神戸市中央区磯部どうり磯辺通１丁目２番２０号　３F</td>
+                        <td>〒651-0084<br><br>神戸市中央区磯辺通１丁目２番２０号　３F</td>
                     </tr>
                     <tr>
                         <td>取引先銀行</td>
