--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="company-contents-down" data-aos="fade-left">
                     <img src="img/servicepic.jpg" alt="" class="company-contents-img">
                     <div class="contents-down-box">
-                        <h4 class="contents-box-title">卸売り業者様、末端消費者様向け</h4>
+                        <h4 class="contents-box-title">卸売業者様、末端消費者様向け</h4>
                         <p class="contents-box-text">加工メーカー様の扱い商品を中心に販売を行っております。
                             海外加工を通じて得た加工メーカー様の良さ、こだわりをより深いところまで、ご提案することが可能です。
                             また国内工場同様、弊社QC（品質管理者）が細かい手の届かない製品作りまでお手伝いができます。</p>
@@ -146,7 +146,7 @@
                 <table class="footer-table-left">
                     <tr>
                         <td>商号</td>
-                        <td>株式会社 エスピートレード</td>
+                        <td>株式会社 エスビートレード</td>
                     </tr>
                     <tr>
                         <td>代表者</td>
@@ -154,7 +154,7 @@
                     </tr>
                     <tr>
                         <td>事業内容</td>
-                        <td>生鮮ぎ魚介及び冷凍魚介の卸売、輸出入　食料品<br><br>
+                        <td>生鮮魚介及び冷凍魚介の卸売、輸出入　食料品<br><br>
                         一般及び飲料の卸売、輸出入　前各号に<br><br>
                         附帯・関連する一切の業務</td>
                     </tr>
@@ -166,15 +166,15 @@
                         <td>事務所</td>
                         <td>TEL 078-351-2227 　FAX 078-351-2228<br><br>
                         〒650-0023<br><br>
-                        神戸市中央区栄町通５丁目２番10号　佳山ビル401号室</td>
+                        神戸市中央区栄町通５丁目２番１０号　佳山ビル401号室</td>
                     </tr>
                     <tr>
                         <td>本社所在地</td>
-                        <td>〒651-0084<br><br>神戸市中央区磯辺通１丁目２番２０号　３F</td>
+                        <td>〒651-0084<br><br>神戸市中央区磯辺通１丁目１番２０号　３F</td>
                     </tr>
                     <tr>
                         <td>取引先銀行</td>
-                        <td>神戸信用銀行　兵庫支店</td>
+                        <td>神戸信用金庫　兵庫支店</td>
                     </tr>
                 </table>
             </div>
