--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     <p>We Work More Fun and Exciting than People.</p>
                 </div>
                 <div class="company-name">
-                    <p>株式会社　エスビートレート</p>
-                    <p>SB TRADE CO.,LTD.COMPANY</p>
+                    <p>株式会社　エスビートレード</p>
+                    <p>SB TRADE CO., LTD.</p>
                 </div>
             </div>
         </section>
@@ -133,7 +133,7 @@
             </div>
             <div class="contact-mail">
                 <h4>Contact us</h4>
-                <p><a href="contact.php">メールにてのお問い合わせはこちら</a></p>
+                <p><a href="contact.php">メールでのお問い合わせはこちら</a></p>
             </div>
         </section>
 
