--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>株式会社エスビートレード</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
+    <meta name="description" content="株式会社エスビートレードは生鮮魚介及び冷凍魚介の卸売、輸出入、食料品
+    一般及び飲料の卸売、輸出入、輸出入、前各号に附帯・関連する一切の業務を行っております。お気軽にお問い合わせください。" />
+    <meta name="keywords" content="株式会社エスビートレードについて">
+    <meta name="google-site-verification" content="GtKIU1y548qm6owCZuPY4N2o2coIswm8SVfBVUJKfdY" />
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/service_content.css">
@@ -11,7 +16,6 @@
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/footer.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>Document</title>
     <script src="https://kit.fontawesome.com/461c67f52d.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -54,9 +58,9 @@
             </div>
             <div class="company-contents-inner">
                 <div class="company-contents-upper" data-aos="fade-right">
-                    <img src="img/fish.jpg" alt="" class="company-contents-img">    
+                    <img src="img/fish.jpg" alt="加工メーカ様向けのイメージ画像" class="company-contents-img">    
                     <div class="contents-upper-box">
-                        <h4 class="contents-box-title">加工メーカー様向け</h4>
+                        <h3 class="contents-box-title">加工メーカー様向け</h3>
                         <p class="contents-box-text">人手不足が深刻の中、国内工場は人員確保に苦慮している現状があります。
                             弊社としては海外協力工場に順次原料を送り込んでおります。
                             またその加工した製品の販売協力も行っております。
@@ -65,9 +69,9 @@
                     </div>
                 </div>
                 <div class="company-contents-down" data-aos="fade-left">
-                    <img src="img/servicepic.jpg" alt="" class="company-contents-img">
+                    <img src="img/servicepic.jpg" alt="卸売業者様、末端消費者様向けのイメージ画像" class="company-contents-img">
                     <div class="contents-down-box">
-                        <h4 class="contents-box-title">卸売業者様、末端消費者様向け</h4>
+                        <h3 class="contents-box-title">卸売業者様、末端消費者様向け</h3>
                         <p class="contents-box-text">加工メーカー様の扱い商品を中心に販売を行っております。
                             海外加工を通じて得た加工メーカー様の良さ、こだわりをより深いところまで、ご提案することが可能です。
                             また国内工場同様、弊社QC（品質管理者）が細かい手の届かない製品作りまでお手伝いができます。</p>
