--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <meta name="description" content="株式会社エスビートレードは生鮮魚介及び冷凍魚介の卸売、輸出入、食料品
-    一般及び飲料の卸売、輸出入、輸出入、前各号に附帯・関連する一切の業務を行っております。お気軽にお問い合わせください。" />
+    <meta name="description" content="株式会社エスビートレードは生鮮魚介及び冷凍魚介の卸売、輸出入　食料品
+    一般及び飲料の卸売、輸出入　前各号に附帯・関連する一切の業務を行っております。お気軽にお問い合わせください。" />
     <meta name="keywords" content="株式会社エスビートレードについて">
     <meta name="google-site-verification" content="GtKIU1y548qm6owCZuPY4N2o2coIswm8SVfBVUJKfdY" />
+    <link rel="canonical" href="https://sb-trade.co.jp/">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/service_content.css">
